fix overflowing tables

--- a/src/main/app/src/app/shared/material-form-builder/form/form/form.component.less
+++ b/src/main/app/src/app/shared/material-form-builder/form/form/form.component.less
@@ -4,7 +4,7 @@
  */
 @import "/variables";
 
-.documenten_lijst {
+.mfb-wrapper {
+  position: relative; 
   width: 100%;
-  flex-basis: 100%;
 }
